Clean up game.html by removing unused code
Removed unnecessary setTimeout and console.log statements.

--- a/projJsMataMosquito/game.html
+++ b/projJsMataMosquito/game.html
@@ -123,16 +123,10 @@
 
         mosquitoSpawn();
 
-
         setTimeout
-
         setTimeout(() => {
-            console.log("pinto");
-            
+            console.log("testetimeout"); 
         }, 1000);
-
-
-
     </script>
 </body>
 </html>
